fill docs for /authenticateEmail
