# server/routes/user/services/auth/authenticateEmail.ts
@@ -4,6 +4,8 @@ import { JWT_KEY } from 'config'
 
 import { Authentication, Connection } from 'database'
 
+import { API } from 'shared'
+
 import { yupValidation } from 'middlewares'
 
 import { yup } from 'helpers'
@@ -13,29 +15,29 @@ import { ApiError } from 'utils'
 import type { Route } from 'types/express'
 
 export const authenticateEmail: Route = [
-   yupValidation({ body: { token: yup.string().jwt() } }),
+   yupValidation({ body: { activationToken: yup.string().jwt() } }),
    async (req, res, next) => {
       try {
          await Connection.transaction(async transaction => {
-            const { token } = req.body
+            const { activationToken } = req.body
 
-            verify(token, JWT_KEY)
+            verify(activationToken, JWT_KEY)
 
-            const authentication = await Authentication.findOne({ where: { token } })
+            const authentication = await Authentication.findOne({ where: { activationToken } })
 
             if (!authentication) {
                throw new ApiError(
-                  'Email address authentication',
-                  'The activation link is invalid',
-                  400
+                  API.AUTH.authenticateEmail.header,
+                  API.AUTH.authenticateEmail.post.responses[409].description,
+                  409
                )
             }
 
             if (authentication.authenticated) {
                throw new ApiError(
-                  'Email address authentication',
-                  'An account assigned to email address provided is already authenticated',
-                  400
+                  API.AUTH.authenticateEmail.header,
+                  API.AUTH.authenticateEmail.post.responses[403].description,
+                  403
                )
             }
 
@@ -47,14 +49,14 @@ export const authenticateEmail: Route = [
          if (error instanceof JsonWebTokenError) {
             if (error instanceof TokenExpiredError) {
                throw new ApiError(
-                  'Email address authentication',
-                  'The activation link has expired',
-                  400
+                  API.AUTH.authenticateEmail.header,
+                  API.AUTH.authenticateEmail.post.responses[401].description,
+                  401
                )
             }
             throw new ApiError(
-               'Email address authentication',
-               'The activation link is invalid',
+               API.AUTH.authenticateEmail.header,
+               API.AUTH.authenticateEmail.post.responses[400].description,
                400
             )
          }
